refactor: optimize JSON handling by removing null fields and pretty printing